--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>自己紹介ページ</title>
+    <title>自己紹介</title>
 </head>
 
 <body>
@@ -13,17 +13,21 @@
     </header>
 
     <section>
-        <h2>プロフィール</h2>
-        <p>京都デザイン&テクノロジー専門学校<br>
+        <h2>詳細</h2>
+        <p>学校<br>
+        京都デザイン&テクノロジー専門学校<br>
         スーパーAI&テクノロジー科　ホワイトハッカー専攻
         </p>
 
-        <p>滋賀県出身</p>
+        <p>出身<br>
+        滋賀県</p>
 
-        <p>ゲームをすること・動画を見ることが趣味</p>
+        <p>趣味<br>
+        ゲーム・動画視聴・読書・アニメ鑑賞</p>
 
-        <p>中学校ではテニス部で後衛を<br>
-        高校ではライフル射撃部でエアライフルをしていました</p>
+        <p>部活動<br>
+        中学校：テニス部で後衛<br>
+        高校　：ライフル射撃部でエアライフル・ビームライフル</p>
     </section>
 
 
