--- a/about.html
+++ b/about.html
@@ -14,6 +14,7 @@
 
     <section>
         <h2>詳細</h2>
+
         <p>学校<br>
         京都デザイン&テクノロジー専門学校<br>
         スーパーAI&テクノロジー科　ホワイトハッカー専攻
@@ -23,15 +24,12 @@
         滋賀県</p>
 
         <p>趣味<br>
-        ゲーム・動画視聴・読書・アニメ鑑賞</p>
+        ゲーム・にじさんじ・読書</p>
 
         <p>部活動<br>
-        中学校：テニス部で後衛<br>
-        高校　：ライフル射撃部でエアライフル・ビームライフル</p>
+        中学　：テニス部 後衛<br>
+        高校　：ライフル射撃部 エアライフル・ビームライフル</p>
     </section>
-
-
-    <!-- その他のセクションを追加 -->
 
     <footer>
         <p>&copy; 2024 Your Name</p>
