--- a/index.html
+++ b/index.html
@@ -12,10 +12,9 @@
         <header class="page-header">
             <nav>
                 <ul class="main-nav font-english">
-                    <li><a href="about.html">自己紹介</a></li>
-                    <li><a href="gensin.html">ゲーム１</a></li>
-                    <li><a href="sutare.html">ゲーム２</a></li>
-                    <li><a href="nizi.html">好きなグループ</a></li>
+                    <li><a href="about.html">about</a></li>
+                    <li><a href="game.html">game</a></li>
+                    <li><a href="nizi.html">にじさんじ</a></li>
                     <li><a href="contact.html">お問い合わせ</a></li>
 
                 </ul>
