--- a/game.html
+++ b/game.html
@@ -13,22 +13,37 @@
 
     <section class="game-container">
         <h2>原神</h2>
-        <img class="game-image" src="zelda-botw.jpg" alt="原神">
-        <p>説明文</p>
+        <img class="game-image" src="images/gennsin.jpg" alt="原神">
+        <p>『原神』はオープンワールドのアドベンチャーRPG。 <br>
+            「テイワット」と呼ばれる幻想世界が舞台。
+             この広大な世界で、あなたは7つの国を巡り、ユニークな個性と能力を備えた多様なキャラクターと出会い、
+             彼らと共に強敵と戦いながら、生き別れた兄妹との再会を目指す。</p>
         <p>公式サイト：<a href="https://genshin.hoyoverse.com/ja" target="_blank">https://genshin.hoyoverse.com/ja</a></p>
     </section>
 
     <section class="game-container">
         <h2>崩壊スターレイル</h2>
-        <img class="game-image" src="monster-hunter-world.jpg" alt="崩壊スターレイル">
-        <p>説明文</p>
+        <img class="game-image" src="images/sutare.jpg" alt="崩壊スターレイル">
+        <p>『崩壊スターレイル』はコマンドバトル兼探索。<br>
+            宇宙空間が舞台として作られており、
+            開拓者である主人公が星穹列車と呼ばれる乗り物に乗り広大な宇宙へ旅に出るSFチックなストーリー。
+            エネミーとのバトルだけではなく、ストーリー部分でも楽しめる作品。<br>
+            崩壊スターレイルは、ターン制のコマンドバトルで戦闘が進みます。
+            プレイヤーは、多彩なスキルを駆使して戦いを行うことができ、
+            コマンドバトル特有の戦術的な戦闘を楽しむことが可能です。<br>
+            また、キャラクターの育成や装備の強化など、RPGの要素も充実しています。<br>
+        </p>
         <p>公式サイト：<a href="https://hsr.hoyoverse.com/ja-jp/home" target="_blank">https://hsr.hoyoverse.com/ja-jp/home</a></p>
     </section>
 
     <section class="game-container">
         <h2>ゼンレスゾーンゼロ</h2>
-        <img class="game-image" src="monster-hunter-world.jpg" alt="ゼンレスゾーンゼロ">
-        <p>説明文</p>
+        <img class="game-image" src="images/zennzero.jpg" alt="ゼンレスゾーンゼロ">
+        <p>『ゼンレスゾーンゼロ』は最新都市ファンタジーアクションRPG。<br>
+            現代文明が崩壊した後の世界が舞台<br>
+            冒険しながら、危険が待ち受ける「ホロウ」を調査し、
+            人類文明にとっての最後の希望の裏に隠された秘密を解き明かしていこう。
+            </p>
         <p>公式サイト：<a href="https://zenless.hoyoverse.com/ja-jp/" target="_blank">https://zenless.hoyoverse.com/ja-jp/</a></p>
     </section>
 
