--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                     <li><a href="game.html">game</a></li>
                     <li><a href="nizi.html">にじさんじ</a></li>
                     <li><a href="contact.html">お問い合わせ</a></li>
+                    <li><a href="rei.html">rei</a></li>
 
                 </ul>
             </nav>
