--- a/contact.html
+++ b/contact.html
@@ -3,29 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>お問い合わせページ</title>
+    <title>お問い合わせ</title>
 
+    <link href="./css/styles.css" rel="stylesheet">
 </head>
 <body>
-    <header>
+    <div class="container">
         <h1>お問い合わせ</h1>
-    </header>
-
-    <section>
-        <form action="submit_form.php" method="POST">
-            <label for="name">お名前</label>
-
+        <form action="submit_form.php" method="post">
+            <label for="name">名前</label>
+            <input type="text" id="name" name="name" required>
 
             <label for="email">メールアドレス</label>
-   
+            <input type="email" id="email" name="email" required>
 
             <label for="message">お問い合わせ内容</label>
+            <textarea id="message" name="message" rows="5" required></textarea>
 
+            <button type="submit">送信</button>
         </form>
-    </section>
-
-    <footer>
-        <p>&copy; 2024 Your Name</p>
-    </footer>
+    </div>
 </body>
 </html>
