--- a/game.html
+++ b/game.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="./css/styles.css" rel="stylesheet">
     <title>好きなゲーム紹介ページ</title>
 </head>
 
@@ -13,7 +14,7 @@
 
     <section class="game-container">
         <h2>原神</h2>
-        <img class="game-image" src="images/gennsin.jpg" alt="原神">
+        <img class="game-image" src="images/gen.jpg" alt="原神">
         <p>『原神』はオープンワールドのアドベンチャーRPG。 <br>
             「テイワット」と呼ばれる幻想世界が舞台。
              この広大な世界で、あなたは7つの国を巡り、ユニークな個性と能力を備えた多様なキャラクターと出会い、
