--- a/contact.html
+++ b/contact.html
@@ -23,5 +23,9 @@
             <button type="submit">送信</button>
         </form>
     </div>
+
+    <footer>
+        <p>&copy; 2024 私の会社. 全著作権所有.</p>
+    </footer>
 </body>
 </html>
