--- a/nizi.html
+++ b/nizi.html
@@ -5,3 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>にじさんじ</title>
 </head>
+
+<body>
+
+    
+<footer>
+    <p>&copy; 2024 私の会社. 全著作権所有.</p>
+</footer>
+</body>
+
+</html>
