--- a/rei.html
+++ b/rei.html
@@ -1,2 +1,85 @@
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ホームページの例</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+        header {
+            background-color: #4CAF50;
+            color: white;
+            padding: 10px 0;
+            text-align: center;
+        }
+        nav {
+            display: flex;
+            justify-content: center;
+            background-color: #333;
+        }
+        nav a {
+            color: white;
+            padding: 14px 20px;
+            text-decoration: none;
+            text-align: center;
+        }
+        nav a:hover {
+            background-color: #ddd;
+            color: black;
+        }
+        .container {
+            padding: 20px;
+        }
+        footer {
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 10px 0;
+            position: fixed;
+            width: 100%;
+            bottom: 0;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>ようこそ、私のホームページへ</h1>
+    </header>
+    <nav>
+        <a href="#home">ホーム</a>
+        <a href="#about">私たちについて</a>
+        <a href="#services">サービス</a>
+        <a href="#contact">お問い合わせ</a>
+    </nav>
+    <div class="container">
+        <section id="home">
+            <h2>ホーム</h2>
+            <p>これはホームページのメインセクションです。</p>
+        </section>
+        <section id="about">
+            <h2>私たちについて</h2>
+            <p>ここでは会社やウェブサイトについての情報を提供します。</p>
+        </section>
+        <section id="services">
+            <h2>サービス</h2>
+            <p>私たちが提供するサービスの詳細を説明します。</p>
+        </section>
+        <section id="contact">
+            <h2>お問い合わせ</h2>
+            <p>連絡先情報やお問い合わせフォームを提供します。</p>
+        </section>
+    </div>
+
+    
+    <footer>
+        <p>&copy; 2024 私の会社. 全著作権所有.</p>
+    </footer>
+</body>
+</html>
 
 
