--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>About Me</title>
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/styles.css">
     </head>
     <body>
         <script src="js/main.js"></script>
@@ -12,16 +12,43 @@
         <header class="page-header">
             <nav>
                 <ul class="main-nav font-english">
-                    <li><a href="about.html">about</a></li>
-                    <li><a href="game.html">game</a></li>
-                    <li><a href="nizi.html">にじさんじ</a></li>
-                    <li><a href="contact.html">お問い合わせ</a></li>
-                    <li><a href="rei.html">rei</a></li>
-
+                    <a href="index.html">ホーム</a>
+                    <a href="about.html">about</a>
+                    <a href="game.html">game</a>
+                    <a href="nizi.html">にじさんじ</a>
+                    <a href="contact.html">お問い合わせ</a>
+                    <a href="rei.html">rei</a>
                 </ul>
             </nav>
         </header>
 
+        <div class="container">
+            <section id="home">
+                <h2><a href="index.html">ホーム</a></h2>
+                <p>ホームページのメインセクションです。</p>
+            </section>
+            <section id="about">
+                <h2><a href="about.html">about</a></h2>
+                <p>私について書いてあります。</p>
+            </section>
+            <section id="game">
+                <h2><a href="game.html">game</a></h2>
+                <p>私の好きなゲームについて書いてあります。</p>
+            </section>
+            <section id="nizi">
+                <h2><a href="nizi.html">にじさんじ</a></h2>
+                <p>私が特によく見るグループについて書いてあります。</p>
+            </section>
+            <section id="contact">
+                <h2><a href="contact.html">お問い合わせ</a></h2>
+                <p>お問い合わせページです。</p>
+            </section>
+
+        </div>
+
+        <footer>
+            <p>&copy; 2024 私の会社. 全著作権所有.</p>
+        </footer>
     </body>
 </html>
 
