--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
         <p>出身<br>
         滋賀県</p>
 
-        <p>趣味<br>
+        <p>好きなこと<br>
         ゲーム・にじさんじ・読書</p>
 
         <p>部活動<br>
@@ -32,7 +32,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2024 Your Name</p>
+        <p>&copy; 2024 課題</p>
     </footer>
 </body>
 </html>
