--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2024 私の会社. 全著作権所有.</p>
+        <p>&copy; 2024 課題</p>
     </footer>
 </body>
 </html>
