--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>About Me</title>
         <link rel="stylesheet" href="css/styles.css">
+
     </head>
     <body>
         <script src="js/main.js"></script>
+
+        <div class="main-image">
+            <img src="profile.jpg" alt="写真">
+        </div>
 
         <header class="page-header">
             <nav>
@@ -47,7 +52,7 @@
         </div>
 
         <footer>
-            <p>&copy; 2024 私の会社. 全著作権所有.</p>
+            <p>&copy; 2024 課題</p>
         </footer>
     </body>
 </html>
