--- a/game.html
+++ b/game.html
@@ -9,7 +9,7 @@
 
 <body>
     <header>
-        <h1>好きなゲーム紹介ページ</h1>
+        <h1>好きなゲーム紹介「HoYovers」ページ</h1>
     </header>
 
     <section class="game-container">
@@ -49,7 +49,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2024 Your Name</p>
+        <p>&copy; 2024 課題</p>
     </footer>
 </body>
 </html>
