--- a/rei.html
+++ b/rei.html
@@ -1,84 +1,102 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ホームページの例</title>
+    <title>自己紹介トップページ</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            box-sizing: border-box;
+            background-color: #f4f4f4;
         }
         header {
-            background-color: #4CAF50;
-            color: white;
-            padding: 10px 0;
-            text-align: center;
-        }
-        nav {
-            display: flex;
-            justify-content: center;
             background-color: #333;
-        }
-        nav a {
             color: white;
-            padding: 14px 20px;
-            text-decoration: none;
+            padding: 20px;
             text-align: center;
         }
-        nav a:hover {
-            background-color: #ddd;
-            color: black;
+        header h1 {
+            margin: 0;
+        }
+        .main-image {
+            width: 100%;
+            height: 300px;
+            background-image: url('profile-background.jpg');
+            background-size: cover;
+            background-position: center;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        .main-image img {
+            border-radius: 50%;
+            width: 150px;
+            height: 150px;
+            border: 5px solid white;
         }
         .container {
+            max-width: 1200px;
+            margin: 20px auto;
+            padding: 0 20px;
+        }
+        .section {
+            background-color: white;
             padding: 20px;
+            margin-bottom: 20px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        .section h2 {
+            margin-top: 0;
         }
         footer {
             background-color: #333;
             color: white;
             text-align: center;
             padding: 10px 0;
-            position: fixed;
-            width: 100%;
-            bottom: 0;
+            margin-top: 20px;
         }
     </style>
 </head>
 <body>
-    <header>
-        <h1>ようこそ、私のホームページへ</h1>
-    </header>
-    <nav>
-        <a href="#home">ホーム</a>
-        <a href="#about">私たちについて</a>
-        <a href="#services">サービス</a>
-        <a href="#contact">お問い合わせ</a>
-    </nav>
-    <div class="container">
-        <section id="home">
-            <h2>ホーム</h2>
-            <p>これはホームページのメインセクションです。</p>
-        </section>
-        <section id="about">
-            <h2>私たちについて</h2>
-            <p>ここでは会社やウェブサイトについての情報を提供します。</p>
-        </section>
-        <section id="services">
-            <h2>サービス</h2>
-            <p>私たちが提供するサービスの詳細を説明します。</p>
-        </section>
-        <section id="contact">
-            <h2>お問い合わせ</h2>
-            <p>連絡先情報やお問い合わせフォームを提供します。</p>
-        </section>
-    </div>
 
-    
-    <footer>
-        <p>&copy; 2024 私の会社. 全著作権所有.</p>
-    </footer>
+<header>
+    <h1>山田 太郎の自己紹介ページ</h1>
+</header>
+
+<div class="main-image">
+    <img src="profile.jpg" alt="プロフィール写真">
+</div>
+
+<div class="container">
+    <section class="section">
+        <h2>プロフィール</h2>
+        <p>こんにちは！私は山田太郎です。Web開発者として10年以上の経験を持ち、さまざまなプロジェクトに取り組んできました。このページでは、私のスキルや経験について詳しく紹介しています。</p>
+    </section>
+
+    <section class="section">
+        <h2>スキルと経験</h2>
+        <p>私が得意とする技術には、HTML、CSS、JavaScript、React、Node.js、Python、Djangoなどがあります。また、データベース管理やバージョン管理ツールも習熟しています。</p>
+        <p>詳細はスキルページでご覧いただけます。</p>
+    </section>
+
+    <section class="section">
+        <h2>ポートフォリオ</h2>
+        <p>これまでに携わったプロジェクトや作品集を紹介しています。詳細はポートフォリオページでご覧ください。</p>
+    </section>
+
+    <section class="section">
+        <h2>お問い合わせ</h2>
+        <p>私に関する質問やお問い合わせは、お問い合わせページからご連絡ください。</p>
+    </section>
+</div>
+
+<footer>
+    <p>&copy; 2024 山田 太郎. 全著作権所有.</p>
+</footer>
+
 </body>
 </html>
 
