--- a/nizi.html
+++ b/nizi.html
@@ -14,6 +14,27 @@
         <h1>私の好きなにじさんじグループについて</h1>
     </header>
 
+    <section class="game-container">
+        <h2>エデン組</h2>
+        <img class="game-image" src="images/gen.jpg" alt="原神">
+        <p>私がにじさんじを見だしてから最初にデビューしたグループで、
+            最初からエデン組の中でもスローンズというペアがいたり、一人ひとりの個性が強くてとても見ていて楽しいです</p>
+        <p>公式サイト：<a href="https://genshin.hoyoverse.com/ja" target="_blank">https://genshin.hoyoverse.com/ja</a></p>
+    </section>
+
+    <section class="game-container">
+        <h2>ヴォルタクション</h2>
+        <img class="game-image" src="images/gen.jpg" alt="原神">
+        <p></p>
+        <p>公式サイト：<a href="https://genshin.hoyoverse.com/ja" target="_blank">https://genshin.hoyoverse.com/ja</a></p>
+    </section>
+
+    <section class="game-container">
+        <h2></h2>
+        <img class="game-image" src="images/gen.jpg" alt="原神">
+        <p></p>
+        <p>公式サイト：<a href="https://genshin.hoyoverse.com/ja" target="_blank">https://genshin.hoyoverse.com/ja</a></p>
+    </section>
 <!--横から出るタイプのメニュー-->
 <style>
     body {
