--- a/rei.html
+++ b/rei.html
@@ -1,3 +1,29 @@
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>スライドショー</title>
+    <link rel="stylesheet" href="css/styles.css">
+</head>
+<body>
+
+<div class="slideshow-container">
+    <div class="slides">
+        <img src="image1.jpg" alt="Image 1">
+    </div>
+    <div class="slides">
+        <img src="image2.jpg" alt="Image 2">
+    </div>
+    <div class="slides">
+        <img src="image3.jpg" alt="Image 3">
+    </div>
+</div>
+
+<script src="js/scripts.js"></script>
+
+</body>
+</html>
 
 
 
