--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
                         height: 300px;
                     }
                     </style>
-                    <img src="gatya.png" alt="gatya" class="image">
+                    <img src="images/contact.jpg" alt="contact" class="image">
         <!--ヘッダー-->
         <header class="page-header">
             <nav>
@@ -38,7 +38,7 @@
                     <a href="index.html">ホーム</a>
                     <a href="about.html">about me</a>
                     <a href="game.html">ゲーム</a>
-                    <a href="nizi.html">にじさんじ</a>
+                    <a href="nizi.html">Youtube</a>
                     <a href="contact.html">お問い合わせ</a>
                 </ul>
             </nav>
@@ -52,7 +52,7 @@
                 <a href="index.html">ホーム</a>
                 <a href="about.html">about me</a>
                 <a href="game.html">ゲーム</a>
-                <a href="nizi.html">にじさんじ</a>
+                <a href="nizi.html">Youtube</a>
                 <a href="contact.html">お問い合わせ</a>
             </nav>
         </div>
