--- a/game.html
+++ b/game.html
@@ -31,7 +31,7 @@
                         height: 300px;
                     }
                     </style>
-                    <img src="gatya.png" alt="gatya" class="image">
+                    <img src="images/game.jpg" alt="game" class="image">
         <!--ヘッダー-->
         <header class="page-header">
             <nav>
@@ -39,7 +39,7 @@
                     <a href="index.html">ホーム</a>
                     <a href="about.html">about me</a>
                     <a href="game.html">ゲーム</a>
-                    <a href="nizi.html">にじさんじ</a>
+                    <a href="nizi.html">Youtube</a>
                     <a href="contact.html">お問い合わせ</a>
                 </ul>
             </nav>
@@ -53,7 +53,7 @@
                 <a href="index.html">ホーム</a>
                 <a href="about.html">about me</a>
                 <a href="game.html">ゲーム</a>
-                <a href="nizi.html">にじさんじ</a>
+                <a href="nizi.html">Youtube</a>
                 <a href="contact.html">お問い合わせ</a>
             </nav>
         </div>
@@ -70,19 +70,18 @@
 
 
         <!--ホヨバ-->
-        <div class="game-bg">
         <div class="game-section">
             <h2>HoYovers</h2>
             <p>
                 HoYoversは、ゲーム開発会社です。<br>
                 このページでは、HoYoversが開発したゲームを紹介します。<br>
-            </p></div></div>
+            </p></div>
 
 
         <!--ゲーム紹介-->
     <div class="game-section">
         <h2>原神 (Genshin Impact)</h2>
-        <img src="gatya.png" alt="原神">
+        <img src="images/gen.jpg" alt="原神">
         <p>
             原神は、HoYoverseが開発したオープンワールドRPGです。<br>
             プレイヤーは「旅人」として、広大な世界「テイワット」を探索し、<br>
@@ -93,7 +92,7 @@
 
     <div class="game-section">
         <h2>崩壊スターレイル (Honkai: Star Rail)</h2>
-        <img src="gatya.png" alt="崩壊スターレイル">
+        <img src="images/sutare.jpg" alt="崩壊スターレイル">
         <p>
             崩壊スターレイルは、宇宙を舞台としたターン制バトルRPGです。<br>
             プレイヤーは様々なキャラクターを操り、宇宙を旅しながら謎を解き明かし、<br>
@@ -104,16 +103,13 @@
 
     <div class="game-section">
         <h2>ゼンレスゾーンゼロ (Zenless Zone Zero)</h2>
-        <img src="gatya.png" alt="ゼンレスゾーンゼロ">
+        <img src="images/zennzero.jpg" alt="ゼンレスゾーンゼロ">
         <p>
             ゼンレスゾーンゼロは、近未来都市を舞台としたアクションRPGです。<br>
             プレイヤーは個性的なキャラクターを操作し、都市で発生する異常事態を解決しながら、<br>
             ストーリーを進めていきます。
         </p>
     </div>
-
-
-
 
     <div class="game-kousiki">
         <div>
