--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <a href="index.html">ホーム</a>
                     <a href="about.html">about me</a>
                     <a href="game.html">ゲーム</a>
-                    <a href="nizi.html">にじさんじ</a>
+                    <a href="nizi.html">Youtube</a>
                     <a href="contact.html">お問い合わせ</a>
                 </ul>
             </nav>
@@ -54,7 +54,7 @@
                 <a href="index.html">ホーム</a>
                 <a href="about.html">about me</a>
                 <a href="game.html">ゲーム</a>
-                <a href="nizi.html">にじさんじ</a>
+                <a href="nizi.html">Youtube</a>
                 <a href="contact.html">お問い合わせ</a>
             </nav>
         </div>
@@ -82,27 +82,27 @@
                 <p>ホームページのメインセクションです。</p>
             </div>
             <div class="item">
-                <a href="about.html"><img src="gatya.png" alt="gatya"></a>
+                <a href="about.html"><img src="images/hon1.jpg" alt="hon"></a>
                 <h2>about me</h2>
                 <p>私について書いてあるページです。</p>
             </div>
             <div class="item">
-                <a href="game.html"><img src="gatya.png" alt="gatya"></a>
+                <a href="game.html"><img src="images/game.jpg" alt="game"></a>
                 <h2>game</h2>
                 <p>私が特に好きなゲームについて紹介しているページです。</p>
             </div>
             <div class="item">
-                <a href="nizi.html"><img src="gatya.png" alt="gatya"></a>
-                <h2>にじさんじ</h2>
-                <p>私が特に良く見るグループについて紹介しているページです。</p>
+                <a href="nizi.html"><img src="images/Youtube.jpg" alt="Youtube"></a>
+                <h2>Youtube</h2>
+                <p>私が良く見るYoutubeについて紹介しているページです。</p>
             </div>
             <div class="item">
-                <a href="contact.html"><img src="gatya.png" alt="gatya"></a>
+                <a href="contact.html"><img src="images/coment.jpg" alt="komennto"></a>
                 <h2>お問い合わせ</h2>
                 <p>お問い合わせページです。</p>
             </div>
             <div class="item">
-                <img src="gatya.png" alt="gatya">
+                <img src="images/neko.jpg" alt="neko">
                 <h2>猫</h2>
                 <p>家の猫です。<br>
                 今年１９歳の黒猫です。<br>
