--- a/about.html
+++ b/about.html
@@ -26,8 +26,8 @@
                         height: 300px;
                     }
                     </style>
-                    <img src="gatya.png" alt="gatya" class="image">
-                    
+                    <img src="images/hon2.jpg" alt="hon" class="image">
+
         <!--ヘッダー-->
         <header class="page-header">
             <nav>
@@ -35,7 +35,7 @@
                     <a href="index.html">ホーム</a>
                     <a href="about.html">about me</a>
                     <a href="game.html">ゲーム</a>
-                    <a href="nizi.html">にじさんじ</a>
+                    <a href="nizi.html">Youtube</a>
                     <a href="contact.html">お問い合わせ</a>
                 </ul>
             </nav>
@@ -49,7 +49,7 @@
                 <a href="index.html">ホーム</a>
                 <a href="about.html">about me</a>
                 <a href="game.html">ゲーム</a>
-                <a href="nizi.html">にじさんじ</a>
+                <a href="nizi.html">Youtube</a>
                 <a href="contact.html">お問い合わせ</a>
             </nav>
         </div>
